    for reporting it and Iain Lane for tracing it to the commit
    that introduced the issue.  (Closes: #863887)
  * dh_clean: Bulk delete most files and directories, which gives a
    noticable speed up for source packages building many binary
    packages.

  [ Iain Lane ]
  * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
    added in 10.3.  (Closes: #863961)

  [ Michael Stapelberg ]
  * Dh_Getopt: Provide a more detailed error message when there are
    no buildable packages caused by architecture restrictions.
    (Closes: #858467)
  * Dh_Lib: Split package_arch($package) into three distinct functions.

 -- Niels Thykier <niels@thykier.net>  Sun, 04 Jun 2017 11:09:56 +0000

debhelper (10.4) experimental; urgency=medium

  * Team upload.

  [ Niels Thykier ]
  * meson.pm: Pass --wrap-mode=nodownload to meson (requires meson
    0.40-1 or later).
  * dh_install: Fix initialized warning when --sourcedir is absent
    on the cmd-line.
  * dh_missing: Accept --sourcedir (given it is passed by dh_install).
    (Closes: #862049)
  * Dh_Lib.pm: Fix a bug in pkgfile that caused dh to skip helpers
    that had configuration files.  Thanks to Michael Biebl for finding
    and reporting.  (Closes: #863387)

  [ Chris Lamb ]
  * dh_fixperms: Fix regression where dh_fixperms would fail to correct
    permissions because it used an invalid find expression.
    (Closes: #862003)

 -- Michael Biebl <biebl@debian.org>  Fri, 26 May 2017 22:08:37 +0200

debhelper (10.3) experimental; urgency=medium

  [ Helmut Grohne ]
  * Supply PKG_CONFIG for cross compilation with the makefile buildsystem.
    (Closes: #853881)
  * Disable stripping during dh_auto_* in makefile buildsystem in compat 11.
    (Closes: #844077)
  * Remove explicit "Multi-Arch: no" stanzas as they are auto-rejected.
    (Closes: #857028)

  [ Niels Thykier ]
  * Dh_Lib.pm: Make getpackages() produce the correct result independently