@@ -18,6 +18,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
     added in 10.3.  (Closes: #863961)
+  * dh_install: Pass --exclude/-X to dh_missing. (Closes: #863447)
 
   [ Michael Stapelberg ]
   * Dh_Getopt: Provide a more detailed error message when there are
